   "Start", "Stop", "Clear", "Resubmit"
3. In batch mode do not account events in non-running mode, reduce
   cpu load with sleep in non-running mode. 
4. Introduce go4.js with go4-related JavaScript code
5. Provide html-based condition and parameter editors
6. Support access to ROOT-based http server from go4 GUI. 
   Just when staring go4, specify:
      [shell]  go4 http://localhost:8080
    

Changes in Go4 v4.7.0
1. Store main window geometry and toolboxes settings in hotstart (only qt4).
   Makes possible to reproduce exactely view of the main panel. 
2. In go4-config script provide --cflags, --libs and --glibs option.
   This should allow to build libraries and executables, which are using
   go4 libraries.    
3. When taking ROOT objects from DABC-based application, also request and
   unpack list of streamer infos. This allow to browse and display objects 
   with different class version.
4. Improve handling of superimposed graphs and histograms: support
   time axis, correctly set colors, adjust size of legends box.
5. Use MSG_NOSIGNAL option when send/recv data via socket (only for Unix).
   Allows to correctly terminate analysis when socket corrupted or broken.
6. Activate graphics editor (TGedEditor) when called via context menu.
   Was not working due to recent ROOT changes.      
7. In web-browser allow to explore parameter and events objects, registered
   in the analysis. Hide unsupported types.
8. Add support of fastcgi. Now go4 can deliver its data to standard 
   web server (like Apache or lighttpd). This allows to control access rights
   and security with usual methods, provides by web-servers.    
9. Use QMdiArea instead of obsolete QWorkspace, solves several small
   problems in window management. 
10.To provide full support of ROOT6 one dictionary per go4 library 
   will be created. Exclude dictionary generation for gui classes while
   no libraries with qt classes exists. 
11.Mostly complete porting to ROOT6 and Qt5.